[metadata]
name = bulk_task
version = 0.0.2
url = https://github.com/buserbrasil/bulk-task
license = MIT
author = Walison Filipe
author_email = walisonfilipe@hotmail.com
description = Celery bulk tasks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[tool:pytest]
addopts = --flake8 --cov=bulk_task --cov-report html --cov-report term
python_files = tests.py test_*.py *_tests.py

[aliases]
test=pytest
